Padding fix for close modal button

--- a/src/components/Modal.astro
+++ b/src/components/Modal.astro
@@ -107,7 +107,8 @@ const { id } = Astro.props;
   cursor: pointer;
   font-weight: bold;
   z-index: 1003;
-  line-height: 0.8;
+  line-height: 1;
+  padding-bottom: 4px;
   transition: all 0.2s ease;
 }
 
